--- a/src/dictionary.html
+++ b/src/dictionary.html
@@ -303,32 +303,43 @@
             <div class="additional__container">
                 <div class="additional__menu">
                     <div class="dictionary-menu">
-                        <div class="dictionary-menu__item js-faq">
-                            <div class="dictionary-menu__head">
-                                <span>ЖБИ</span>
-                                <img src="img/icon-down-grey.svg" alt="">
-                            </div>
-                            <div class="dictionary-menu__body js-faq-body">
-                                <a href="#" class="link link-dark link-sm">Трубы</a>
-                            </div>
-                        </div>
-                        <div class="dictionary-menu__item js-faq">
-                            <div class="dictionary-menu__head">
-                                <span>Крепеж и метизы</span>
-                                <img src="img/icon-down-grey.svg" alt="">
-                            </div>
-                            <div class="dictionary-menu__body js-faq-body">
-                                <a href="#" class="link link-dark link-sm">Скоба</a>
+                        <div class="sidebar__item">
+                            <button class="btn sidebar__item__collapse-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-collapse-1" aria-expanded="false" aria-controls="#sidebar-collapse-1">
+                                ЖБИ
+                            </button>
+                            <div class="collapse" id="sidebar-collapse-1">
+                                <ul class="sidebar__links">
+                                    <li class="sidebar__links__item" data-value="Балка">
+                                        <a href="#" class="link link-dark sidebar__link">Трубы</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="dictionary-menu__item js-faq">
-                            <div class="dictionary-menu__head">
-                                <span>Фитинг для труб</span>
-                                <img src="img/icon-down-grey.svg" alt="">
+                        <div class="sidebar__item">
+                            <button class="btn sidebar__item__collapse-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-collapse-2" aria-expanded="false" aria-controls="#sidebar-collapse-2">
+                                Крепеж и метизы
+                            </button>
+                            <div class="collapse" id="sidebar-collapse-2">
+                                <ul class="sidebar__links">
+                                    <li class="sidebar__links__item" data-value="Балка">
+                                        <a href="#" class="link link-dark sidebar__link">Скоба</a>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="dictionary-menu__body js-faq-body">
-                                <p><a href="#" class="link link-dark link-sm">Затвор</a></p>
-                                <p><a href="#" class="link link-dark link-sm">Муфта</a></p>
+                        </div>
+                        <div class="sidebar__item">
+                            <button class="btn sidebar__item__collapse-btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-collapse-3" aria-expanded="false" aria-controls="#sidebar-collapse-3">
+                                Фитинг для труб
+                            </button>
+                            <div class="collapse" id="sidebar-collapse-3">
+                                <ul class="sidebar__links">
+                                    <li class="sidebar__links__item" data-value="Балка">
+                                        <a href="#" class="link link-dark sidebar__link">Затвор</a>
+                                    </li>
+                                    <li class="sidebar__links__item" data-value="Балка">
+                                        <a href="#" class="link link-dark sidebar__link">Муфта</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
