--- a/src/home.html
+++ b/src/home.html
@@ -250,8 +250,8 @@
         </div>
     </div>
     <div class="header__bottom">
-        <div class="navigation">
-            <ul class="navigation__list container">
+        <div class="navigation container">
+            <ul class="navigation__list">
                 <li class="navigation__item">
                     <a href="#" class="navigation__link link link-dark">Тендеры</a>
                 </li>
