sliders in card

--- a/src/ceni-postavshikov-card.html
+++ b/src/ceni-postavshikov-card.html
@@ -266,41 +266,85 @@
 </header>
     <div class="content">
         <div class="container">
-            <ul class="breadcrumbs">
-                <li class="breadcrumbs__item">
-                    <a href="#" class="link link-dark breadcrumbs__link">Главная</a>
-                </li>
-                <li class="breadcrumbs__item">
-                    <a href="#" class="link link-dark breadcrumbs__link">Цены поставщиков</a>
-                </li>
-                <li class="breadcrumbs__item">
-                    <a href="#" class="link link-dark breadcrumbs__link">Бетон гранит</a>
-                </li>
-                <li class="breadcrumbs__item">
-                    <span class="breadcrumbs__text">Бетон гранит М-150 П2 F50 W2</span>
-                </li>
-            </ul>
-            <H2 class="h2 product-card__title">Бетон гранит М-150 П2 F50 W2</H2>
+            <div class="breadcrumbs-panel">
+                <ul class="breadcrumbs">
+                    <li class="breadcrumbs__item">
+                        <a href="#" class="link link-dark breadcrumbs__link">Главная</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="#" class="link link-dark breadcrumbs__link">Цены поставщиков</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <a href="#" class="link link-dark breadcrumbs__link">Бетон гранит</a>
+                    </li>
+                    <li class="breadcrumbs__item">
+                        <span class="breadcrumbs__text">Бетон гранит М-150 П2 F50 W2</span>
+                    </li>
+                </ul>
+                <a href="#" class="link link-sm breadcrumbs__subscribe">
+                    <img src="img/icon-subscribe.svg" alt="">
+                    Подписаться на разлел
+                </a>
+            </div>    
+            <h2 class="h2 product-card__title">Бетон гранит М-150 П2 F50 W2</h2>
             <div class="product-card">
-                <div class="product-card__img">
-                    <a href="#" class="product-card__link">
-                        <img src="img/product-card.jpg" alt="">
-                    </a>
+                <div class="product-card__carusel">
+                    <div class="product-card__slider-nav">
+                        <div class="slider">
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card__slider">
+                        <div class="slider">
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                            <div class="slider-item">
+                                <img src="img/product-card.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="product-card__params">
                     <div class="product-card__params__item">
                         <div class="product-card__params-name">Размер:</div>
-                        <div class="product-card__params-border"></div>
                         <div class="product-card__params-value">M - 150</div>
                     </div>
                     <div class="product-card__params__item">
                         <div class="product-card__params-name">Сорт:</div>
-                        <div class="product-card__params-border"></div>
                         <div class="product-card__params-value">F100 W4</div>
                     </div>
                     <div class="product-card__params__item">
                         <div class="product-card__params-name">Примечение:</div>
-                        <div class="product-card__params-border"></div>
                         <div class="product-card__params-value">B - 10/12,5</div>
                     </div>
                 </div>
