--- a/src/tender-bidding.html
+++ b/src/tender-bidding.html
@@ -291,21 +291,26 @@
 <div class="content">
 
     <div class="container">
-        <ul class="breadcrumbs">
-            <li class="breadcrumbs__item">
-                <a href="#" class="link link-dark breadcrumbs__link">Главная</a>
-            </li>
-            <li class="breadcrumbs__item">
-                <span class="breadcrumbs__text">Тендеры</span>
-            </li>
-            <li class="breadcrumbs__item">
-                <span class="breadcrumbs__text">Бетон гранит</span>
-            </li>
-            <li class="breadcrumbs__item">
-                <span class="breadcrumbs__text">Тендер №279</span>
-            </li>
-        </ul>
-
+        <div class="breadcrumbs-panel">
+            <ul class="breadcrumbs">
+                <li class="breadcrumbs__item">
+                    <a href="#" class="link link-dark breadcrumbs__link">Главная</a>
+                </li>
+                <li class="breadcrumbs__item">
+                    <span class="breadcrumbs__text">Тендеры</span>
+                </li>
+                <li class="breadcrumbs__item">
+                    <span class="breadcrumbs__text">Бетон гранит</span>
+                </li>
+                <li class="breadcrumbs__item">
+                    <span class="breadcrumbs__text">Тендер №279</span>
+                </li>
+            </ul>
+            <a href="#" class="link link-sm breadcrumbs__subscribe">
+                <img src="img/icon-subscribe.svg" alt="">
+                Подписаться на разлел
+            </a>
+        </div>
         <div class="tender-page">
 
             <div class="tender-page__content">
