разбил тенеры на страницы + начал стр заявки

--- a/src/statement-no-auth.html
+++ b/src/statement-no-auth.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Тендер - идут торги</title>
+    <title>Заявка для не авторизованного</title>
 </head>
 
 <body class="page transition-off">
@@ -297,13 +297,13 @@
                     <a href="#" class="link link-dark breadcrumbs__link">Главная</a>
                 </li>
                 <li class="breadcrumbs__item">
-                    <span class="breadcrumbs__text">Тендеры</span>
+                    <span class="breadcrumbs__text">Заявки покупателей</span>
                 </li>
                 <li class="breadcrumbs__item">
                     <span class="breadcrumbs__text">Бетон гранит</span>
                 </li>
                 <li class="breadcrumbs__item">
-                    <span class="breadcrumbs__text">Тендер №279</span>
+                    <span class="breadcrumbs__text">Бетон гранит М-150 П2 F50 W2</span>
                 </li>
             </ul>
             <a href="#" class="link link-sm breadcrumbs__subscribe">
@@ -315,7 +315,7 @@
 
             <div class="tender-page__content">
                 <h3 class="tender-page__text">
-                    Тендер на поставку отводы, соеденители и прочее
+                    Куплю ЖБИ Плиты аэродромные ПАГ-14А800-1 Москва и область
                 </h3>
                 <div class="tender-page__row">
                     <h4 class="tender-page__text">
@@ -535,28 +535,27 @@
                 </div>
 
 
-                <!-- TODO: скрыть если зарегистрирован-->
-<!--                <div class="tender-page__section">-->
-<!--                    <form action="" class="tender-page__form">-->
-<!--                        <h4 class="tender-page__form-field">-->
-<!--                            Вход-->
-<!--                        </h4>-->
-<!--                        <label class="materil-group tender-page__form-field">-->
-<!--                            <span class="materil-group__label">Email</span>-->
-<!--                            <input type="text" class="form-control base-input materil-group__input">-->
-<!--                            <div class="materil-group__error-text">Клиента с такой электронной почтой не существует</div>-->
-<!--                        </label>-->
-<!--                        <label class="materil-group tender-page__form-field">-->
-<!--                            <span class="materil-group__label">Пароль</span>-->
-<!--                            <input type="text" class="form-control base-input materil-group__input">-->
-<!--                        </label>-->
-<!--                        <button type="submit" class="btn btn-primary recovery__btn">Войти</button>-->
-<!--                    </form>-->
-<!--                </div>-->
+                <div class="tender-page__section">
+                    <form action="" class="tender-page__form">
+                        <h4 class="tender-page__form-field">
+                            Вход
+                        </h4>
+                        <label class="materil-group tender-page__form-field">
+                            <span class="materil-group__label">Email</span>
+                            <input type="text" class="form-control base-input materil-group__input">
+                            <div class="materil-group__error-text">Клиента с такой электронной почтой не существует</div>
+                        </label>
+                        <label class="materil-group tender-page__form-field">
+                            <span class="materil-group__label">Пароль</span>
+                            <input type="text" class="form-control base-input materil-group__input">
+                        </label>
+                        <button type="submit" class="btn btn-primary recovery__btn">Войти</button>
+                    </form>
+                </div>
 
             </div>
             <div class="tender-page__sidebar">
-                <div class="tender-page__row">
+                <div class="tender-page__row d-flex justify-content-end">
                     <div class="status status--open">Открытый конкурс</div>
                 </div>
                 <div class="tender-page__row">
@@ -587,8 +586,7 @@
                             </p>
                         </div>
 
-                        <!--TODO: если ИДУТ торги-->
-                        <!--<div class="customer-info__row">
+                        <div class="customer-info__row">
                             <p class="customer-info__label">
                                 Статус: <span class="customer-info__accent-green">Идут торги</span>
                             </p>
@@ -599,16 +597,8 @@
                                 <span class="customer-info__accent-black">0</span>
                             </p>
                             <a href="" class="customer-info__btn btn btn-primary js-take-part">Принять участие в торгах</a>
-                        </div>-->
-                        <!--TODO: если ИДУТ торги-->
-
-                        <!--TODO: если торги ЗАВЕРШЕНЫ-->
-                        <div class="customer-info__head">
-                            <p class="customer-info__label">
-                                Статус: <span class="customer-info__accent-grey">Торги завершены</span>
-                            </p>
                         </div>
-                        <!--TODO: если торги ЗАВЕРШЕНЫ-->
+
                     </div>
                 </div>
 
