закончил таблицу для страницы заявки авторизованный

--- a/src/statement-isauth.html
+++ b/src/statement-isauth.html
@@ -444,7 +444,7 @@
                     </p>
                 </div>
 
-             
+
 
                 <div class="tender-page__section">
                     <div class="info-block">
@@ -518,10 +518,81 @@
                                     <span class="table__value">Руб. за</span>
                                 </div>
                                 <div class="table__col table__col--scount">
-                                    <select name="" id="" class="select-header">
+                                    <select name="" id="" class="select select--sm">
                                         <option value="1">кг</option>
-                                        <option value="2">ft</option>
-                                        <option value="3">pounds</option>
+                                        <option value="2">т</option>
+                                        <option value="3">lb</option>
+                                        <option value="4">st</option>
+                                    </select>
+                                </div>
+                                <div class="table__col table__col--count">
+                                    <input type="text" class="base-input base-input--sm" value="1200">
+                                </div>
+                            </div>
+                            <div class="table__row">
+                                <div class="table__col table__col--num">
+                                    2
+                                </div>
+                                <div class="table__col table__col--stitle">
+                                    Стойки
+                                </div>
+                                <div class="table__col table__col--asize">
+                                    СВ - 95 -3
+                                </div>
+                                <div class="table__col table__col--scount">
+                                    296
+                                </div>
+                                <div class="table__col table__col--swidth">
+                                    Не указана
+                                </div>
+                                <div class="table__col table__col--swidth">
+                                    Не указаны
+                                </div>
+                                <div class="table__col table__col--scost">
+                                    <input type="text" class="base-input base-input--sm" value="1200">
+                                    <span class="table__value">Руб. за</span>
+                                </div>
+                                <div class="table__col table__col--scount">
+                                    <select name="" id="" class="select select--sm">
+                                        <option value="1">кг</option>
+                                        <option value="2">т</option>
+                                        <option value="3">lb</option>
+                                        <option value="4">st</option>
+                                    </select>
+                                </div>
+                                <div class="table__col table__col--count">
+                                    <input type="text" class="base-input base-input--sm" value="1200">
+                                </div>
+                            </div>
+                            <div class="table__row">
+                                <div class="table__col table__col--num">
+                                    3
+                                </div>
+                                <div class="table__col table__col--stitle">
+                                    Стойки
+                                </div>
+                                <div class="table__col table__col--asize">
+                                    СВ - 95 -3
+                                </div>
+                                <div class="table__col table__col--scount">
+                                    296
+                                </div>
+                                <div class="table__col table__col--swidth">
+                                    Не указана
+                                </div>
+                                <div class="table__col table__col--swidth">
+                                    Не указаны
+                                </div>
+                                <div class="table__col table__col--scost">
+                                    <input type="text" class="base-input base-input--sm" value="1200">
+                                    <span class="table__value">Руб. за</span>
+                                </div>
+                                <div class="table__col table__col--scount">
+                                    <select name="" id="" class="select select--sm">
+                                        <option value="1">кг</option>
+                                        <option value="2">т</option>
+                                        <option value="3">lb</option>
+                                        <option value="4">st</option>
                                     </select>
                                 </div>
                                 <div class="table__col table__col--count">
