поправил селекты в хедере

--- a/src/ui.html
+++ b/src/ui.html
@@ -324,7 +324,7 @@
                 </div>
                 <form class="header__search">
                     <div class="header__search-decorator"></div>
-                    <label class="materil-group active">
+                    <label class="materil-group header__search-input-wrap active">
                         <select name="" id="" class="select-header">
                             <option value="1">Цены поставщиков</option>
                             <option value="2">Заявки покупателей</option>
@@ -583,7 +583,7 @@
                 </div>
                 <form class="header__search">
                     <div class="header__search-decorator"></div>
-                    <label class="materil-group active">
+                    <label class="materil-group header__search-input-wrap active">
                         <select name="" id="" class="select-header">
                             <option value="1">Цены поставщиков</option>
                             <option value="2">Заявки покупателей</option>
